Fixing Podio issue 150

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -148,10 +148,10 @@
     {% block footer %}
     <div class="columns footer-left">
       <div class="social-icons">
-        <a class="icon-twitter-circled medium red" href="#"></a>
-        <a class="icon-facebook-circled medium red" href="#"></a>
+        <a class="icon-twitter-circled medium red" href="https://twitter.com/Gchangelab" title="Follow us on Twitter!"></a>
+        <!--a class="icon-facebook-circled medium red" href="#"></a>
         <a class="icon-gplus-circled medium red" href="#"></a>
-        <a class="icon-flickr-circled medium red" href="#"></a>
+        <a class="icon-flickr-circled medium red" href="#"></a-->
       </div>
       <div class="row" id="footer-links">
         <div class="large-4 columns">
