Fixing Podio issue 123

--- a/skills/templates/skills/partials/skill_list_large.html
+++ b/skills/templates/skills/partials/skill_list_large.html
@@ -14,7 +14,7 @@
         <span class="trainingbit-count">{{ skill.trainingbit_count }} Training Bits</span>
         <hr>
         <div class="tooltip" data-tooltip="{% trans 'Number of likes this skill has' %}"><i class="icon-heart small red"></i> {{ skill.likes.count }}</div>
-        <div class="tooltip" data-tooltip="{% trans 'Number of users taking this skill right now' %}"><i class="icon-users small red"></i> {{ skill.users_completed.count }}</div>
+        <div class="tooltip" data-tooltip="{% trans 'Number of users taking this skill right now' %}"><i class="icon-users small red"></i> {{ skill.users_in_progress.count }}</div>
       </div>
     </div>
   </li>
