Fixing podio issue 113

--- a/global_change_lab/templates/404.html
+++ b/global_change_lab/templates/404.html
@@ -11,7 +11,7 @@
   <a href="/"><img src="{% static 'images/404.jpg' %}"></a>
 
   <h2 style="position: absolute; top: 40%; right: 5%; width: 35%;">
-    Go to <a href="/" style="text-decoration: underline">the home page</a> or go out and change the world!
+    Go to <a href="/" class="red">the home page</a> or go out and change the world!
   </h2>
 </div>
 {% endblock %}
