Fixing Podio issue 135

--- a/global_change_lab/templates/account/password_reset.html
+++ b/global_change_lab/templates/account/password_reset.html
@@ -16,8 +16,15 @@
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans "Reset My Password" %}" />
+        {#{ form.as_p }#}
+        <p>
+          <label for="id_email">E-mail:</label>
+          <input id="id_email" type="text" placeholder="Your e-mail address" name="email" autofocus="autofocus"></input>
+          {% if form.email.errors %}
+            <small class="error">{{ form.email.errors.as_text }}</small>
+          {% endif %}
+        </p>
+        <input type="submit" value="{% trans "Reset My Password" %}" class="button small" />
     </form>
 
     <p>
