--- a/skills/templates/skills/trainingbit_cover.html
+++ b/skills/templates/skills/trainingbit_cover.html
@@ -35,7 +35,7 @@
 {% include 'skills/partials/trainingbit_header.html' %}
 {% endwith %}
 
-<div class="row">
+<div class="row cover-content">
   <div class="gcl-column2 cover-description">
     <p class="trainingbit-description">{{ trainingbit.description }}</p>
     <div class="start-trainingbit-container">
@@ -69,7 +69,7 @@
       </div>
     </div>
 
-    <div>
+    <div class="metadata">
       <div class="columns small-6">
         <h5>Topics</h5>
         <ul class="no-bullet">
