--- a/skills/templates/skills/project_view.html
+++ b/skills/templates/skills/project_view.html
@@ -122,7 +122,7 @@
 		<input type="hidden" name="parent" value="">
 		<textarea class="comment" name="text" placeholder="Write a reply..."></textarea>
 		{# <button class="small">Comment</button> #}
-		<button>Reply</button>
+		<button class="button">Reply</button>
 	</form>
 
 
