--- a/skills/templates/skills/trainingbit_cover.html
+++ b/skills/templates/skills/trainingbit_cover.html
@@ -91,7 +91,7 @@
 </div>
 <hr>
 <div class="row">
-  <h2>Shared by others</h2>
+  <h2 class="shared-by-others">Shared by others</h2>
   <div class="gcl-column">
     {% for project in project_list0 %}
       {% include 'skills/partials/project_column.html' %}
