--- a/skills/templates/skills/trainingbit_view.html
+++ b/skills/templates/skills/trainingbit_view.html
@@ -126,7 +126,7 @@
 $(document).ready(function() {
   $('#project-form-errors').each(function() {
     var verticalOffset = $(this).offset().top;
-    $(window).scrollTop(verticalOffset);
+    $(window).scrollTop(verticalOffset - 50);
   });
   // $('html, body').animate({
   //   scrollTop: $("#project-form-errors").offset().top
