--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -53,7 +53,7 @@
     {% for message in messages %}
     <div class="alert-box {{ message.tags }}" data-alert>
       {{ message }}
-      <a href="#" class="close">&times;</a>
+      <a href="#" class="close"><i class="icon-cancel"></i></a>
     </div>
     {% endfor %}
   </div>
@@ -131,7 +131,7 @@
 
       <div id="info-box" data-url-name="{% current_url_name %}">
         <div class="text">{% block info %}{% endblock %}</div>
-        <a href="#" class="close">&times;</a>
+        <a href="#" class="close"><i class="icon-cancel"></i></a>
       </div>
 
       {% block content %}{% endblock %}
