--- a/scss/new_user.scss
+++ b/scss/new_user.scss
@@ -123,7 +123,13 @@ div#new-user-greeter {
 
   h1 {
     // text-align: center;
-    font-size: 2rem;
+
+    @media #{$small-only} {
+      font-size: 1.2rem;
+    }
+    @media #{$medium-up} {
+      font-size: 2rem;
+    }
     margin-top: 0.5rem;
     margin-bottom: 1.5rem;
   }
