Fixing podio issue 152

--- a/global_change_lab/templates/admin_dashboard.html
+++ b/global_change_lab/templates/admin_dashboard.html
@@ -33,15 +33,15 @@
         </div>
       </div>
       <div class="large-6 columns">
-        <h6>Number of users signing up during last week</h6>
+        <h6>Number of users signing up within the last 7 days</h6>
         <div id="admin-datablock">
           <p>There were {{ num_users_last_week }} users signing up, within the last 7 days.</p>
         </div>
-        <h6>Number of users signing up during last month</h6>
+        <h6>Number of users signing up within the last 30 days</h6>
         <div id="admin-datablock">
           <p>There were {{ num_users_last_month }} users signing up, within the last 30 days.</p>
         </div>
-        <h6>Number of users signing up during last year</h6>
+        <h6>Number of users signing up within the last 365 days</h6>
         <div id="admin-datablock">
           <p>There were {{ num_users_last_year }}, within the last 365 days.</p>
         </div>
