Adding the Helvetica webfont as well as moved the Entypo font, fixing Podio issue 124

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -32,6 +32,31 @@
 
   {% block scripts %}
   {% endblock %}
+  <!--
+  /**
+   * @license
+   * MyFonts Webfont Build ID 2848142, 2014-07-18T10:15:11-0400
+   * 
+   * The fonts listed in this notice are subject to the End User License
+   * Agreement(s) entered into by the website owner. All other parties are 
+   * explicitly restricted from using the Licensed Webfonts(s).
+   * 
+   * You may obtain a valid license at the URLs below.
+   * 
+   * Webfont: Helvetica Neue 45 Light by Linotype
+   * URL: http://www.myfonts.com/fonts/linotype/neue-helvetica/helvetica-45-light/
+   * Copyright: Copyright &#x00A9; 1988, 1990, 1993, 2002 Adobe Systems Incorporated.  All
+   * Rights Reserved. &#x00A9; 1981, 2002 Heidelberger Druckmaschinen AG. All rights
+   * reserved.
+   * Licensed pageviews: 250,000
+   * 
+   * 
+   * License: http://www.myfonts.com/viewlicense?type=web&buildid=2848142
+   * 
+   * © 2014 MyFonts Inc
+  */
+
+  -->
   <link rel="stylesheet" href="{% static 'global_change_lab/css/app.css' %}">
   <!--[if ie 9]>
   <link rel="stylesheet" href="{% static 'global_change_lab/css/ie9.css' %}">
