--- a/scss/base.scss
+++ b/scss/base.scss
@@ -313,7 +313,7 @@ footer {
 
     a {
       display: block;
-      font-family: arial, sans-serif;
+      /* font-family: arial, sans-serif; */
     }
 
   }
