Podio issue 124 almost fixed.

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -58,7 +58,8 @@ $metadata_height: rem-calc(38px);
 // $body-bg: #fff;
 // $body-font-color: #222;
 // $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-$body-font-family: "HelveticaNeueLTStd-Lt", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+// $body-font-family: "HelveticaNeueLTStd-Lt", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
