--- a/skills/templates/skills/skills_overview.html
+++ b/skills/templates/skills/skills_overview.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="page-buttons">
+<div class="page-buttons hide-for-small-only">
   {# View recommended #}
   {% if showing_recommended %}
     <a href="{% url 'skills:skills_overview' %}" class="button">
