--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -13,6 +13,19 @@
   {% if debug %}
   <script src="//localhost:35729/livereload.js"></script>
   {% endif %}
+  
+  <!-- The browser-update.org script notifies users to upgrade their browser -->
+  <script type="text/javascript"> 
+  var $buoop = {}; 
+  $buoop.ol = window.onload; 
+  window.onload=function(){ 
+    try {if ($buoop.ol) $buoop.ol();}catch (e) {} 
+    var e = document.createElement("script"); 
+    e.setAttribute("type", "text/javascript"); 
+    e.setAttribute("src", "//browser-update.org/update.js"); 
+    document.body.appendChild(e); 
+  } 
+  </script> 
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="{% static 'global_change_lab/js/user.min.js' %}"></script>
