--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -10,7 +10,7 @@
   {# For showing not-full-pages to iPhones  #}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="http://fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet" type="text/css">
   {% if debug %}
   <script src="//localhost:35729/livereload.js"></script>
   {% endif %}
@@ -78,10 +78,7 @@
   {% block extra_head %}{% endblock %}
 
   <!--[if lt IE 9]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
-    <script src="//s3.amazonaws.com/nwapi/nwmatcher/nwmatcher-1.2.5-min.js"></script>
-    <script src="//html5base.googlecode.com/svn-history/r38/trunk/js/selectivizr-1.0.3b.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
+    <script src="{% static 'global_change_lab/js/ie8.min.js' %}"></script>
   <![endif]-->
 
 </head>
