Adding a respond proxy as mentioned on https://github.com/scottjehl/Respond/issues/152

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -77,13 +77,16 @@
 
   {% block extra_head %}{% endblock %}
 
+  <!--[if lt IE 9]>
+    <script src="{% static 'global_change_lab/js/ie8.min.js' %}"></script>
+
+    <link id="respond-proxy" rel="respond-proxy" href="{% static 'respond-proxy/respond-proxy.html' %}">
+    <link id="respond-redirect" rel="respond-redirect" href="/respond.proxy.gif">
+    <script src="/respond.proxy.js"></script>
+  <![endif]-->
 </head>
 
 <body class="{% block body-classes %}{% endblock %}">
-
-  <!--[if lt IE 9]>
-    <script src="{% static 'global_change_lab/js/ie8.min.js' %}"></script>
-  <![endif]-->
 
   {% comment %}
   {# It was decided that we don't show messages #}
