[Franklin] Change background color

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -8,7 +8,7 @@
 // Allows the use of rem-calc() or lower-bound() in your settings
 @import "foundation/functions";
 
-$gcl-lightgray: #E2E4DD; // Backgrounds
+$gcl-lightgray: #BBE4FF; // Backgrounds
 // $gcl-lightgray: #CED0C9; // Backgrounds
 $gcl-midgray: #565B5B;   // Stencils
 $gcl-darkgray: #373737;  // Headings
